--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -22,6 +22,7 @@ WORKDIR /app
 
 COPY --from=builder /app/venv /app/venv
 COPY src /app/src
+COPY tests /app/tests
 
 ENV PATH="/app/venv/bin:$PATH"
 ENV PYTHONDONTWRITEBYTECODE=1
